Update 로또 번호 등수 예측.md

--- a/로또 번호 등수 예측.md
+++ b/로또 번호 등수 예측.md
@@ -1,1 +1,63 @@
+# 로또 6/45(이하 '로또'로 표기)는 1부터 45까지의 숫자 중 6개를 찍어서 맞히는 대표적인 복권입니다. 아래는 로또의 순위를 정하는 방식입니다
+로또를 구매한 민우는 당첨 번호 발표일을 학수고대하고 있었습니다. 하지만, 민우의 동생이 로또에 낙서를 하여, 일부 번호를 알아볼 수 없게 되었습니다. 당첨 번호 발표 후, 민우는 자신이 구매했던 로또로 당첨이 가능했던 최고 순위와 최저 순위를 알아보고 싶어 졌습니다.
+알아볼 수 없는 번호를 0으로 표기하기로 하고, 민우가 구매한 로또 번호 6개가 44, 1, 0, 0, 31 25라고 가정해보겠습니다. 당첨 번호 6개가 31, 10, 45, 1, 6, 19라면, 당첨 가능한 최고 순위와 최저 순위의 한 예는 아래와 같습니다.
 
+|순위|당첨|내용|
+|----|----|-----|
+1	|6개 |번호가 모두 일치|
+2	|5개 |번호가 일치|
+3	|4개 |번호가 일치|
+4	|3개 |번호가 일치|
+5	|2개 |번호가 일치|
+6|(낙첨)|	그 외|
+
+
+## 풀이
+
+### 내풀이
+```javascript
+function solution(lottos, win_nums) {
+    let right = 0
+    
+    let countzero = lottos.filter(x => x===0).length
+    
+    for (let i=0; i < lottos.length; i++){
+        for (let j=0; j < win_nums.length; j++){
+            if (lottos[i]===win_nums[j]){
+                right = right+1
+            }
+        }
+    }
+    
+    var answer = [7-right- countzero === 7 ? 6:7-right- countzero , 7-right === 7 ? 6:7-right,];
+
+    return answer;
+}
+
+```
+심플하게 이중 포문으로 내가 선택한 번호가 몇개나 맞는지 보고,
+비어 있는 번호가 모두 맞거나 모두 틀리는 경우를 체크했다.
+
+
+### 만점 풀이
+```javascript
+function solution(lottos, win_nums) {
+    const rank = [6, 6, 5, 4, 3, 2, 1];
+
+    let minCount = lottos.filter(v => win_nums.includes(v)).length;
+    let zeroCount = lottos.filter(v => !v).length;
+
+    const maxCount = minCount + zeroCount;
+
+    return [rank[maxCount], rank[minCount]];
+}
+```
+깔끔하다...;;
+
+## 오늘의 TIL
+만점 풀이의 로직과 내 풀이 로직은 크게 다르지 않다.
+for문을 두번쓴 나보다는 훨신 직관적이지만, 일단 배열에서 같은 숫자와 0을 찾아 등수를 찾는 로직은 같다.
+다만 등수를 먹이는 부분에 있어서 미리 rank라는 배열을 만들어서 maxCount,minCount에 따른 등수를 참조하는 로직은 좋은것 같다.
+
+또한 for문은 참 편한데 복잡하다. filter, map 같은 함수에 좀 익숙해져야겠다.
+하지만 지금은 6개의 숫자만 있는 것이지만 만약 1000개 정도되는 숫자면... 글쌔 시간복잡도 해결을 어케하면 좋을까... ㅠㅠ
