--- a/로또 번호 등수 예측.md
+++ b/로또 번호 등수 예측.md
@@ -45,7 +45,7 @@ function solution(lottos, win_nums) {
     const rank = [6, 6, 5, 4, 3, 2, 1];
 
     let minCount = lottos.filter(v => win_nums.includes(v)).length;
-    let zeroCount = lottos.filter(v => !v).length;
+    let zeroCount = lottos.filter(v => !v).length; // !0 은 True 이다!!
 
     const maxCount = minCount + zeroCount;
 
