--- a/완주 못한 선수 찾기.md
+++ b/완주 못한 선수 찾기.md
@@ -1,1 +1,35 @@
+# 수많은 마라톤 선수들이 마라톤에 참여하였습니다. 단 한 명의 선수를 제외하고는 모든 선수가 마라톤을 완주하였습니다.
+
+마라톤에 참여한 선수들의 이름이 담긴 배열 participant와 완주한 선수들의 이름이 담긴 배열 completion이 주어질 때, 완주하지 못한 선수의 이름을 return 하도록 solution 함수를 작성해주세요.
+
+
+participant|	completion	|return|
+|----------|------|-------|
+|["leo", "kiki", "eden"]	|["eden", "kiki"]	|"leo"|
+|["marina", "josipa", "nikola", "vinko", "filipa"]|	["josipa", "filipa", "marina", "nikola"]|	"vinko"|
+|["mislav", "stanko", "mislav", "ana"]	|["stanko", "ana", "mislav"]	|"mislav"|
+
+
+# 풀이
+### 내풀이
+```javascript
+
+function solution(participant, completion) {
+    
+    var answer = '';
+    
+    participant.sort()
+    completion.sort()
+
+
+    for(let i=0; i<=participant.length; i++){
+        if(participant[i] !== completion[i]){
+            return participant[i]
+        }
+    }
+
+    return participant;
+```
+오늘은 좀 쉽네 ㅎㅎ 만점 풀이랑 거의 같아서 만점 풀이는 생략한다!!
+어차피 두 배열의 길이 차이는 1로 고정되어 있으니 똑같이 배열해놓고 앞부터 비교하되 꼬인 부분만 한곳만 찾으면 되는 로직이다.
 
