--- a/예산 주기.md
+++ b/예산 주기.md
@@ -1,1 +1,47 @@
+# S사에서는 각 부서에 필요한 물품을 지원해 주기 위해 부서별로 물품을 구매하는데 필요한 금액을 조사했습니다.
 
+그러나, 전체 예산이 정해져 있기 때문에 모든 부서의 물품을 구매해 줄 수는 없습니다. 그래서 최대한 많은 부서의 물품을 구매해 줄 수 있도록 하려고 합니다.
+물품을 구매해 줄 때는 각 부서가 신청한 금액만큼을 모두 지원해 줘야 합니다. 예를 들어 1,000원을 신청한 부서에는 정확히 1,000원을 지원해야 하며, 1,000원보다 적은 금액을 지원해 줄 수는 없습니다.
+부서별로 신청한 금액이 들어있는 배열 d와 예산 budget이 매개변수로 주어질 때, 최대 몇 개의 부서에 물품을 지원할 수 있는지 return 하도록 solution 함수를 완성해주세요.
+
+
+## 입출력 예시
+d(부서 예산)|	총 예산	|result|
+|----------|------|-------|
+|[1,3,2,5,4]	|9	|3|
+|[2,2,3,3,]|	10|	4|
+
+
+# 풀이
+### 내풀이
+```javascript
+function solution(d, budget) {
+    d.sort()
+    let answer = 0
+    let bud = budget
+    
+    for(let i = 0; i < d.length; i++){
+        bud = bud - d[i]
+        
+        if(bud >= 0){
+          answer++
+        }else if(bud < 0){
+            break
+        }
+        
+    }
+
+    return answer;
+}
+```
+문제는 간단했다 단순히 오름차순 정렬을하고 각 예산을 총예산에서 하나씩 빼는 로직으로 총 예산이 0보다 작아지면 멈추는 로직
+하지만 테스트는 통과하지 못했다. 그래더 반대로 각 예산을 더하는 로직으로 해봤지만 역시나 마찬가지...
+
+그리고 이것저것 해보는 도중 충격적인 사실을 발견 했는데
+
+```javascript
+    d.sort((a, b) => a - b) // 얘를 사용해야 정말 숫자오름 차순으로 정렬된다
+    d.sort() // 얘를 사용하면 그냥 가장 뒷자리에 있는 숫자를 기준으로 오름차순이 되어 버린다 [7,22,1,13] => [1,13,22,7] 이렇게 정렬되어 버린다는거;;;
+```
+
+이건 잘 기억하도록 하자... (증발한 1시간)
