--- a/짤린 삼각형.md
+++ b/짤린 삼각형.md
@@ -4,7 +4,7 @@
 가로의 길이 W와 세로의 길이 H가 주어질 때, 사용할 수 있는 정사각형의 개수를 구하는 solution 함수를 완성해 주세요.
 
 
-## 입출력 예시
+### 입출력 예시
 w|	h	|result|
 |----------|------|-------|
 |8	|12	|80|
