--- a/123의 나라.md
+++ b/123의 나라.md
@@ -4,7 +4,7 @@
 2. 124 나라에는 모든 수를 표현할 때 1, 2, 4만 사용합니다. 예를 들어서 124 나라에서 사용하는 숫자는 다음과 같이 변환됩니다.
 
 
-## 입출력 예시
+### 입출력 예시
 10진법|	123나라	|
 |----------|------|
 |1|1|
