--- a/구명보트.md
+++ b/구명보트.md
@@ -33,6 +33,8 @@ function solution(people, limit) {
 그냥 people을 정렬하고 가장 무거운 사람과 가벼운 사람을 짝지어서 limit 초과면 무거운 사람부터 내보내는 것이다.
 실제로 그렇게 짜보니 테스트는 통과되지면 효율성 테스트를 통과하지 못했다. (효율성 0점..;;;)
 
+자바스크립트의 배열이나, 파이썬의 리스트의 요소를 추가 삭제 하는 로직은 생각보다 리소스를 많이 잡아 먹는다는 점을 기억하자.
+
 그래서 결국 답을 보게되었는데 "투포인터 알고리즘"을 알게 되었다.
 
 ## 투포인트 알고리즘
